# screenshot-cpp-mg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  app.rc  captureoverlay.cpp  communicator.h  drawcommands.h  generate_qrc_list.py  main.cpp  overlay.cpp  overlay.h  preview.cpp  preview.h  resources.qrc  settings.cpp  settings.h  utils.cpp  utils.h  windowoverlay.cpp  windowoverlay.h
src/: app.rc  captureoverlay.cpp  captureoverlay.h  main.cpp  preview.cpp  preview.h  settings.cpp  settings.h  types.h  utils.cpp  utils.h  windowoverlay.cpp  windowoverlay.h
src/platform/: hotkeymanager.h  keycapturemanager.h  platform.h  windowpicker.h
src/platform/windows/: platform_windows.cpp  winhotkeymanager.cpp  winhotkeymanager.h  winkeycapturemanager.cpp  winkeycapturemanager.h  winwindowpicker.cpp  winwindowpicker.h
